<resources>
    <string name="app_name">Leafly_Application_git</string>
    <string name="todo">TODO</string>
    <string name="logo_trips">VyLogo trips</string>
    <string name="test_text">test_text</string>
    <string name="arrow">arrow</string>
    <string name="use_points_info">Kjøp deg noe under reisen, gi til miljøet eller finn deg noe i vår poengshop.</string>
    <string name="member_benefits_info">Vi har alltid noen fordeler for våre kunder. Jo høyere nivå, desto flere fordeler!</string>
    <string name="vy_logo_splash">vy logo splash</string>
    <string name="clean_the_ocean_label">Rydd plast i havet</string>
    <string name="title_search">Søk</string>
    <string name="payment_label">Betaling</string>
    <string name="choose_from">Velg reise</string>
    <string name="choose_time">Velg tidspunkt</string>
    <string name="order_detail_label">Betaling</string>
    <string name="trip_detail_label">Detaljer om turen</string>
    <string name="finished_purchase_label">Takk for kjøpet!</string>
    <string name="choose_trips_points_overview">Du oppnår </string>
    <string name="choose_trips_points_overview2"> miljøpoeng poeng av denne reisen </string>
    <string name="title_travel_details"> Reisedetaljer </string>
    <string name="enkeltbillet"> EnkeltBillett </string>
    <string name="title_trips">Dine Reiser</string>
    <string name="text_trips_complete">Fullførte Reiser</string>
    <string name="trips_avbestilte_reiser">Avbestilte reiser</string>
    <string name="trip_title_info">Her vil du finne dine reiser og biletter</string>
    <string name="ingen_reiser">Du har ikke kjøpt noen billetter enda</string>
    <string name="total_pris">Totalpris:</string>
    <string name="points_achieved">Miljøpoeng oppnåd:</string>
    <string name="voksen">Voksen</string>
    <string name="ticket_icon">ticket icon</string>
    <string name="leaf_image">leafe image</string>
    <string name="checkicon">checkicon</string>
    <string name="line">separating line</string>
    <string name="travelers">1 reisende</string>
    <string name="payment_option">Hvordan vil du betale?</string>
    <string name="title_miljopoints">Miljøpoeng</string>
    <string name="use_points_label">Bruk poeng</string>
    <string name="membership_level">Medlemsnivå</string>
    <string name="welcome_title_miljopoint">Velkommen, <br/> Navn!</string>
    <string name="log_out_u">Logg ut</string>
    <string name="benefits_title">Medlems-fordeler</string>
    <string name="scan_title">Scan Kode</string>
    <string name="use_points_title">Bruk poeng</string>
    <string name="button_to_plant_a_tree">Med poengene du opptjener kan du gi tilbake til naturen ved å plante trær.</string>
    <string name="plant_a_tree_label">Plant et tre</string>
    <string name="donate_tree_title">Plant et tre</string>
    <string name="donate_ocean_title">Rydd plast i havet</string>
    <string name="button_to_clean_the_ocean">Bruk poengene til å bidra med rydding av plast som blir kastet i havet.</string>
    <string name="read_more">Les mer</string>
    <string name="growing_tree_label">Se ditt tre vokse</string>
    <string name="history_label">Poenghistorikk</string>
    <string name="donate_link_to_plant_tree">Plant et tre</string>
    <string name="donate_link_to_save_the_ocean">Rydd plast i havet</string>
    <string name="use_points_link_to_point_shop">Poeng Shop</string>
    <string name="member_benefits_label">Medlemsfordeler</string>
    <string name="progression_label">Din progresjon</string>
    <string name="membership_details_text">Her kan du se hva slags fordeler du får med de forskjellige nivåene av medlemskap</string>
    <string name="see_progression_text">Se full progresjon</string>
    <string name="tree_grow_text_progression">Se ditt tre vokse!</string>
    <string name="see_history_progression">Poenghistorikk</string>
    <string name="during_trip_coffee">Kjøp kaffe</string>
    <string name="during_trip_food_drinks">Kjøp mat og drikke</string>
    <string name="membership_level_spire">Frø</string>
    <string name="membership_spire">Spire</string>
    <string name="progression_total_points">Totalt oppsamlet</string>
    <string name="progression_disponibelt">Saldo</string>
    <string name="netflix_title">3 måneder med Netflix</string>
    <string name="dplay_title">Leie av film på Viaplay</string>
    <string name="odeon_title">Odeon Kinobiletter</string>
    <string name="til_betaling">Fullfør betaling</string>
    <string name="confirmation_message">Takk for kjøpet!</string>
    <string name="hjem">Hjem</string>
    <string name="rectangle">rectangle</string>
    <string name="enviorment_points">Miljøpoeng</string>
    <string name="vipps_logo_option">Vipps logo option</string>
    <string name="traing_point_svg">traing point svg</string>
    <string name="end_point_svg">End Point svg</string>
    <string name="line_logo_svg">line logo svg</string>
    <string name="wifi_svg">wifi svg</string>
    <string name="accesabillity_svg">accesabillity svg</string>
    <string name="silent_vagon_svg">silent vagon svg</string>
    <string name="food_and_drinks_svg">food and drinks svg</string>
    <string name="arrival">arrival</string>
    <string name="departure">departure</string>
    <string name="departure_time">departure time</string>
    <string name="arrival_time">arrival time</string>
    <string name="_1_voksen">1 voksen</string>
    <string name="price">price</string>
    <string name="videre">Gå videre</string>
    <string name="points">points</string>
    <string name="fra_oslo_s_til_fredrikstad">Fra Oslo s til fredrikstad</string>
    <string name="i_dag">I dag</string>
    <string name="number_of_stops">4 stopp</string>
    <string name="mandag">Mandag</string>
    <string name="avgang">Avgang</string>
    <string name="billetten_er_lastet_ned">Billetten er lastet ned.</string>
    <string name="god_tur">God tur!</string>
    <string name="til_billettoversikt">Hjem</string>
    <string name="til_milj_poeng">Gå til miljøpoeng</string>
    <string name="buy_returbillett">Kjøp returbillett</string>
    <string name="_25_mai">25 mai</string>
    <string name="velg">Velg</string>
    <string name="betal_med">Betal med</string>
    <string name="betal">Betal</string>
    <string name="din_saldo">Din saldo</string>
    <string name="etter_kj_p">Etter kjøp</string>
    <string name="tree">Tree</string>
    <string name="pluss">+</string>
    <string name="minus">-</string>
    <string name="plant_a_tree_dialog">Med poengene du opptjener kan du gi tilbake til naturen ved å plante trær.</string>
    <string name="velg_antall">Velg antall</string>
    <string name="totalsum">Totalsum:</string>
    <string name="plant_a_tree">Plant a Tree</string>
    <string name="rydd_plast_i_havet">Rydd plast i havet</string>
    <string name="rydd_plast_dialog">Bruk poengene til å bidra med rydding av plast som blir kastet i havet.</string>
    <string name="rydd_plas_dialog_2">Støtt ocean cleanup med rydding av plast i havet. Her kan du gi dagsstøtte</string>
    <string name="velg_antall_kg">Velg antall dager</string>
    <string name="rydd_x_antall_kilo_plast">Gi X dager med støtte</string>
    <string name="ocean">ocean</string>
    <string name="_100_pr_tre">100 / pr tre</string>
    <string name="_100_pr_kg">50 / pr dag</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="god_dag">God dag</string>
    <string name="hurtigvalg">Hurtigvalg</string>
    <string name="train_logo_white">train logo white</string>
    <string name="oslo_s">Oslo S</string>
    <string name="stasjoner_close_by">Stasjoner i nærheten</string>
    <string name="hvor_reiser_du_fra">Hvor reiser du fra?</string>
    <string name="poeng">Miljøpoeng</string>
    <string name="cofee">cofee</string>
    <string name="velkommen">Velkommen,</string>
    <string name="scan_icon">scan icon</string>
    <string name="value">value</string>
    <string name="flower_icon">flower icon</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="opprett_bruker">Opprett bruker</string>
    <string name="logg_inn">Logg inn</string>
    <string name="velkommen_exlamation">Velkommen!</string>
    <string name="not_logged_in_dialog">Du må være logget inn for å opptjene og se dine miljøpoeng.</string>
    <string name="fordeler">Fordeler</string>
    <string name="what_is_points">Hva er miljøpoeng?</string>
    <string name="buy">Kjøp</string>
    <string name="narvesen_logo">narvesen_logo</string>
    <string name="close_marker">close marker</string>
    <string name="odeon_logo">odeon logo</string>
    <string name="takk_for_ditt_bidrag">Takk for ditt bidrag!</string>
    <string name="gratulerer_du_har_ryddet_x_kg_plast_i_havet">Gratulerer! Du har Ryddet x kg plast i havet!</string>
    <string name="g_til_dine_kj_p">Gå til dine kjøp</string>
    <string name="fortsett_handle">Fortsett å handle</string>
    <string name="takk_for_ditt_kj_p">Takk for ditt kjøp!</string>
    <string name="ditt_kj_p_kan_finnes_under_poenghistorikk">Ditt kjøp kan finnes under Poenghistorikk</string>
    <string name="se_kupong">Se kupong</string>
    <string name="gratulerer_du_har_plantet_x_antall_tr_r">Gratulerer! Du har plantet X antall trær!</string>
    <string name="starbucks_logo">starbucks logo</string>
    <string name="hvor_mange_poeng_f_r_jeg">Hvor mange poeng får jeg?</string>
    <string name="du_f_r_forskjellige_poeng_avhengig_av_hva_du_kj_per">Du får ulikt antall poeng, avhengig av hva du kjøper.</string>
    <string name="her_kan_du_finne_ut_hvordan_du_bruker_dine_oppsamlede_poeng">Her kan du finne ut hvordan du bruker dine oppsamlede poeng.</string>
    <string name="hvordan_bruke_milj_poeng">Hvordan bruke miljøpoeng?</string>
    <string name="reise_med_poengene">Hva er Miljøpoeng?</string>
    <string name="informasjon_om_hvordan_du_kan_reise_med_poengene_dine">Informasjon om hva Miljøpoeng er og nyttig informasjon.</string>
    <string name="alt_du_trenger_vite_om_hva_du_kan_bruke_poengene_dine_p">Alt du trenger å vite om hva du kan bruke poengene dine på.</string>
    <string name="hva_kan_jeg_bruke_poengene_p">Hva kan jeg bruke poengene på?</string>
    <string name="niv_basert_poeng">Nivåbasert poeng</string>
    <string name="gjelder_hvis_du_register_ditt_medlemsnummer_i_forbindelse_med_kj_p">Gjelder hvis du register ditt medlemsnummer i forbindelse med kjøp.</string>
    <string name="reiser_med_vy">Reiser med Vy</string>
    <string name="ordinary_purchases">Ordinære kjøp</string>
    <string name="season_sead">Nivå Frø</string>
    <string name="season_spire">Nivå Spire</string>
    <string name="season_tree">Nivå Tre</string>
    <string name="_1_poeng_per_krone_eks_bestillingsgebyr">1 poeng per krone (eks. bestillingsgebyr)</string>
    <string name="_1_poeng_per_krone">1 poeng per krone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Har du allerede en konto?</string>
    <string name="_9605">9605</string>
    <string name="textview">textview</string>
    <string name="verdikupong">VerdiKupong</string>
    <string name="din_kupongkode">Din kupongkode</string>
    <string name="_dialog_cupon_">Kupongen brukes i til bestilling blabla i den nettbutikken du har kjøpt verdi hos. Kan kun brukes 1 gang.</string>
    <string name="qrcode">qrCode</string>
    <string name="_27605">27605</string>
    <string name="example_text">Example text</string>
    <string name="milj_poeng">miljøpoeng</string>
</resources>