<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.leafly_application_git.fragments.main_page.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_trips"
        android:name="com.example.leafly_application_git.fragments.main_page.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/navigation_miljopoints"
        android:name="com.example.leafly_application_git.fragments.main_page.miljopoints.MiljopointsFragment"
        android:label="@string/title_miljopoints"
        tools:layout="@layout/fragment_miljopoints" />
</navigation>
