<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_check_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/checkicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_done_outline_greem_24px" />

    <TextView
        android:id="@+id/textView_thanks_for_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_display"
        android:text="@string/takk_for_ditt_kj_p"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView_check_icon"
        app:layout_constraintStart_toStartOf="@+id/imageView_check_icon"
        app:layout_constraintTop_toBottomOf="@+id/imageView_check_icon" />

    <TextView
        android:id="@+id/textView_thanks_for_purchase_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_text"
        android:text="@string/ditt_kj_p_kan_finnes_under_poenghistorikk"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/textView_thanks_for_purchase"
        app:layout_constraintStart_toStartOf="@+id/textView_thanks_for_purchase"
        app:layout_constraintTop_toBottomOf="@+id/textView_thanks_for_purchase" />

    <Button
        android:id="@+id/button_purchase_view_cupon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#41927B"
        android:fontFamily="@font/sf_display"
        android:text="@string/se_kupong"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_thanks_for_purchase_info"
        app:layout_constraintStart_toStartOf="@+id/textView_thanks_for_purchase_info"
        app:layout_constraintTop_toBottomOf="@+id/textView_thanks_for_purchase_info" />

    <Button
        android:id="@+id/button_purchase_keep_shopping_shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:fontFamily="@font/sf_display"
        android:text="@string/fortsett_handle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_purchase_view_cupon"
        app:layout_constraintStart_toStartOf="@+id/button_purchase_view_cupon"
        app:layout_constraintTop_toBottomOf="@+id/button_purchase_view_cupon" />

    <ImageView
        android:id="@+id/imageView_close_purchase_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/close_marker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clear_24px" />
</androidx.constraintlayout.widget.ConstraintLayout>