<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_username_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/sf_text"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/sf_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/editText_username_signup"
        app:layout_constraintStart_toStartOf="@+id/editText_username_signup"
        app:layout_constraintTop_toBottomOf="@+id/editText_username_signup" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_text"
        android:text="@string/register"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_password_signup"
        app:layout_constraintStart_toStartOf="@+id/editText_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_signup" />

    <TextView
        android:id="@+id/textView_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_text"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

    <EditText
        android:id="@+id/editText_password_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/sf_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_signup"
        app:layout_constraintStart_toStartOf="@+id/editText_email_signup"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_signup" />
</androidx.constraintlayout.widget.ConstraintLayout>